2004-01-19 Benoit Regrain
    * removal of file gdcmHeader2.cxx
    * split class gdcmHeader into gdcmParser and gdcmHeader, with gdcmHeader
      inheriting from gdcmParser. This split is to prepare the integration
      of dicom dir parsing
    * bug fix under python

2004-01-16 Jean-Pierre Roux
    * removal of class gdcmHeaderEntrySet
    * removal of files gdcmHeaderEntrySet.cxx, gdcmHeaderEntrySet.h
    * add file gdcmHeader2.cxx 
    * add method gdcmHeader::SetPrintLevel (for PrintHeader)

2004-01-15 Benoit Regrain
     * src/gdcmDicSet.[h|cxx] : add virtual entries to have a reference of
       entries created while parsing the header. Thus, they will be destroyed
       when the gdcmDictSet will be destroyed
     * src/gdcmHeader.cxx, gdcmHeaderEntrySet.cxx : uses virtual entries of
       gdcmDictSet

2004-01-15 Benoit Regrain
     * vtk/vtkGdcmReader.cxx : bug fix : before, with python only, the program
       made a fatal error because of the memory release at the end of program.
       The problem was in vtkGdcmReader::ExecuteData where we were allocate
       some memory and vtk seems to have some problems with that.
     * src/gdcmHeaderEntrySet.cxx : bug fix for std lib and cout

2004-01-14 Benoit Regrain
     * src/gdcmHeaderEntry.[h|cxx] : gdcmElValue -> gdcmHeaderEntry
     * src/gdcmHeaderEntrySet.[h|cxx] : gdcmElValSet -> gdcmHeaderEntrySet
     * src/*.[h|cxx] : make changes due to class name changes
     * gdcmPython/demo/*.py : bug fix due to method names

2004-01-13 Benoit Regrain
     * src/*.[h|cxx] : coding style
     * vtk/*.[h|cxx] : coding style

2004-01-13 Benoit Regrain
     * gdcmPython/testSuite.py : test the readable flag of file for tests
     * src/gdcmDict.cxx, gdcmElValSet.cxx : bug fix under windows for prints.
       It's lied to the stl compilation by MSVC (windows, always windows...)
     * src/gdcmIdo.h, gdcmHeaderIdo.cxx : remove the Ido unused files

2004-01-12 Benoit Regrain
     * src/*.h : add comments